traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:17: error: not found: value avanceR
  avanceR();
  ^